--- a/app/components/map.hbs
+++ b/app/components/map.hbs
@@ -1,5 +1,4 @@
 <div class="map">
-  <img alt="Map image at coordinates {{@lat}}, {{@lng}}" ...attributes
-    src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/{{@lng}},{{@lat}},{{@zoom}}/{{@width}}x{{@height}}@2x?access_token={{this.token}}"
-    width={{@width}} height={{@height}}>
+  <img alt="Map image at coordinates {{@lat}}, {{@lng}}" ...attributes src={{this.src}} width={{@width}}
+    height={{@height}}>
 </div>
