--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,16 +4,13 @@
   <LinkTo @route="about" class="button">About Us</LinkTo>
 </Jumbo>
 
+
 <div class="rentals">
   <ul class="results">
+    {{#each @model as |property|}}
     <li>
-      <Rental />
+      <Rental @rental={{property}} />
     </li>
-    <li>
-      <Rental />
-    </li>
-    <li>
-      <Rental />
-    </li>
+    {{/each}}
   </ul>
 </div>
