Add inner div to navbar to have background color extend full width. Remove max width from container and Add max width to body.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -68,7 +68,7 @@ p {
  */
 
 .container {
-  max-width: 1024px;
+
   min-height: 100vh;
   background: #f9f9f9;
   margin: 0 auto;
@@ -117,6 +117,11 @@ p {
 .menu .links a {
   position: relative;
   bottom: 5px;
+}
+
+.menu .inner {
+  max-width: 1024px;
+  margin: auto;
 }
 
 .rentals label span {
@@ -188,6 +193,8 @@ p {
 
 .body {
   padding: 15px;
+  max-width: 1024px;
+  margin: auto;
 }
 /**
  * Similar to Jumbotron
